kubernetes/signoz/signoz-gateway-staging.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: signoz-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-signoz
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: signoz-cert
      hosts:
        - <change-me>
