kubernetes/signoz/signoz-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: signoz
  namespace: infra-signoz
spec:
  hosts:
    - <change-me>
  gateways:
    - istio-system/signoz-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: signoz.infra-signoz.svc.cluster.local
            port:
              number: 8080
